<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add Description</string>
    <string name="fill_the_title">Fill the title</string>
    <string name="add_date">Date</string>
    <string name="date_format">(DD/MM/YYYY)</string>
    <string name="fill_the_description">Fill the description</string>
    <string name="notes">Notes</string>
    <string name="delete_all">Delete All</string>
    <string name="notes_splashScreen">NOTES</string>
    <string name="delete">Delete</string>
    <string name="confirm_message">Are you sure you want to delete this note ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_note">Note Updated</string>
    <string name="save_note">Note Saved</string>
    <string name="deletedSuccessfully">Deleted Successfully</string>
    <string name="requirements_message">Please fill the requirements</string>
    <string name="title_validation_error">Title can only contain alphabets,numbers or @,$,-</string>

</resources>