<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:ellipsize="end"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/description"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textStyle="normal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>